--- a/app/src/main/res/layout/item_shows.xml
+++ b/app/src/main/res/layout/item_shows.xml
@@ -7,10 +7,10 @@
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:clickable="true"
-    android:elevation="20dp"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="10dp"
+    app:cardElevation="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
