--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="colorPrimary">@color/blue_900</color>
     <color name="colorPrimaryDark">@color/blue_1000</color>
     <color name="colorAccent">@color/blue_grey_500</color>
+    <color name="colorAccentLight">@color/blue_grey_300</color>
 
     <!-- Material Design -->
 
