--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,8 +27,9 @@
 
     <color name="colorPrimary">@color/blue_900</color>
     <color name="colorPrimaryDark">@color/blue_1000</color>
-    <color name="colorAccent">@color/blue_grey_500</color>
-    <color name="colorAccentLight">@color/blue_grey_300</color>
+    <color name="colorAccent">@color/blue_grey_600</color>
+    <color name="colorAccentClear">@color/blue_grey_400</color>
+    <color name="colorAccentLight">@color/blue_grey_200</color>
 
     <!-- Material Design -->
 
