--- a/app/src/main/res/layout/item_episodes.xml
+++ b/app/src/main/res/layout/item_episodes.xml
@@ -26,7 +26,7 @@
             android:orientation="horizontal"
             android:weightSum="2">
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/item_episodes__season_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -37,7 +37,7 @@
                 android:textSize="14sp"
                 tools:text="Season: 1" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/item_episodes__number_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -49,7 +49,7 @@
                 tools:text="Number: 1" />
         </LinearLayout>
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:id="@+id/item_episodes__name_text_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
