--- a/app/src/main/res/layout/item_shows.xml
+++ b/app/src/main/res/layout/item_shows.xml
@@ -16,14 +16,14 @@
         android:layout_width="match_parent"
         android:layout_height="120dp">
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <ImageView
             android:id="@+id/item_shows__image_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_image_placeholder" />
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:id="@+id/item_shows__name_text_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
