--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,10 +8,9 @@
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="ifRoom" />
 
-<!--    <item-->
-<!--        android:id="@+id/favorite"-->
-<!--        android:title="@string/search_title"-->
-<!--        android:icon="@drawable/ic_favorite_black"-->
-<!--        app:actionViewClass="android.widget.SearchView"-->
-<!--        app:showAsAction="ifRoom" />-->
+    <item
+        android:id="@+id/update"
+        android:title="@string/restore_title"
+        android:icon="@drawable/ic_update"
+        app:showAsAction="never" />
 </menu>
