--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <!--=============== SCREENS ===============-->
+    <!--=============== RECYCLER VIEW ===============-->
 
     <style name="RecyclerView_ScrollbarStyle">
         <item name="android:scrollbarAlwaysDrawVerticalTrack">true</item>
@@ -36,6 +36,8 @@
         <item name="android:layout_marginRight">3dp</item>
         <item name="android:scrollbarThumbVertical">@drawable/vertical_scrollbar</item>
     </style>
+
+    <!--=============== DETAILS ===============-->
 
     <style name="ShowDetails_LabelTextView">
         <item name="android:layout_width">wrap_content</item>
@@ -56,5 +58,67 @@
         <item name="android:paddingRight">10dp</item>
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textSize">18sp</item>
+    </style>
+
+    <!--=============== PASSWORD ===============-->
+
+    <style name="PIN_DialPad">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">#1A1A1A</item>
+        <item name="android:textSize">36sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="PIN_EditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_marginLeft">80dp</item>
+        <item name="android:layout_marginTop">30dp</item>
+        <item name="android:layout_marginRight">80dp</item>
+        <item name="android:layout_marginBottom">30dp</item>
+        <item name="android:background">@drawable/border_square_empty_grey</item>
+        <item name="android:inputType">textPassword</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/black</item>
+        <item name="android:textSize">48sp</item>
+        <item name="android:letterSpacing">0.45</item>
+        <item name="android:maxLength">6</item>
+    </style>
+
+    <style name="PIN_ConfirmTextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginLeft">80dp</item>
+        <item name="android:layout_marginTop">30dp</item>
+        <item name="android:layout_marginRight">80dp</item>
+        <item name="android:layout_marginBottom">40dp</item>
+        <item name="android:background">@drawable/border_square_fill_grey</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingTop">20dp</item>
+        <item name="android:paddingBottom">20dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <!--=============== PASSWORD ===============-->
+
+    <style name="Login_OptionsButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:background">@drawable/solid_ripple_blue</item>
+        <item name="android:elevation">5dp</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
