Menu favorite option implemented. - Now the app allows the user to browse their favorite series in alphabetical order. - And also allows to click on one to see its details.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,16 @@
                 tools:itemCount="10"
                 tools:listitem="@layout/item_shows" />
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/activity_main__empty_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:visibility="gone"
+                android:text="@string/activity_main__empty_recycler_view"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp" />
+
             <include
                 android:id="@+id/activity_main__loading"
                 layout="@layout/loading"
