--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,11 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/activity_login__default_button"
+        style="@style/Login_OptionsButton"
+        android:text="@string/activity_login__default" />
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/activity_login__fingerprint_button"
         style="@style/Login_OptionsButton"
         android:text="@string/activity_login__fingerprint" />
