--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:gravity="center"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:gravity="center"
+    android:orientation="vertical"
+    android:weightSum="2">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/activity_login__default_button"
-        style="@style/Login_OptionsButton"
-        android:text="@string/activity_login__default" />
+    <!--    <androidx.appcompat.widget.AppCompatButton-->
+    <!--        android:id="@+id/activity_login__default_button"-->
+    <!--        style="@style/Login_OptionsButton"-->
+    <!--        android:text="@string/activity_login__default" />-->
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/activity_login__fingerprint_button"
         style="@style/Login_OptionsButton"
+        android:layout_weight="1"
         android:text="@string/activity_login__fingerprint" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/activity_login__pin_button"
         style="@style/Login_OptionsButton"
+        android:layout_marginBottom="10dp"
+        android:layout_weight="1"
         android:text="@string/activity_login__pin" />
 </LinearLayout>
