--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -112,13 +112,14 @@
     <style name="Login_OptionsButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">10dp</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
-        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
         <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginTop">10dp</item>
         <item name="android:background">@drawable/solid_ripple_blue</item>
         <item name="android:elevation">5dp</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">30sp</item>
     </style>
 </resources>
