--- a/app/src/main/res/layout/item_person_series.xml
+++ b/app/src/main/res/layout/item_person_series.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_cast_credits__card_view"
+    android:id="@+id/item_person_series__card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="5dp"
@@ -14,12 +14,12 @@
     app:cardElevation="5dp">
 
     <TextView
-        android:id="@+id/item_cast_credits__show_text_view"
+        android:id="@+id/item_person_series__show_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="2"
         android:padding="5dp"
         android:textColor="@color/colorPrimary"
         android:textSize="16sp"
-        tools:text="Season: 1" />
+        tools:text="Batman" />
 </androidx.cardview.widget.CardView>
